Add avatar and sign out ability.

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,8 @@ code {
     monospace;
 }
 
-.auth__google-login-button > div {
+.auth__google-login-button > div,
+.auth__google-logout_button > div {
   margin-right: 0 !important;
   padding: 6px !important;
 }
